correction du scroll sur l'axe des X pour la version mobile , CSS pour la version desktop effectuer

--- a/scss/abstracts/_animation.scss
+++ b/scss/abstracts/_animation.scss
@@ -28,8 +28,8 @@
 
 @mixin anim_icon {
   i {
-    transition: 0.9s;
-    transform: rotate(-1440deg);
+    transition: 0.5s;
+    transform: rotate(-360deg);
   }
 }
 
