--- a/scss/layout/_media_accueil.scss
+++ b/scss/layout/_media_accueil.scss
@@ -3,57 +3,6 @@
 @media screen and (max-width: 376px) {
   /*Acceuil*/
 
-  .load_spinner {
-    width: 100%;
-    height: 100vh;
-    background: black;
-    opacity: 0;
-    position: absolute;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    @include load;
-
-    .load_spinner--element {
-      width: 18%;
-      height: 10%;
-      border-radius: 50%;
-      border: 5px solid white;
-      position: relative;
-      opacity: 1.5;
-      z-index: 2000;
-
-      .load_spinner--element--ball-green {
-        width: 28%;
-        height: 28%;
-        border-radius: 50%;
-        background: #05cc9a;
-        position: absolute;
-        top: 4px;
-        left: -2px;
-      }
-      .load_spinner--element--ball-purple {
-        width: 28%;
-        height: 28%;
-        border-radius: 50%;
-        background: rgb(104, 1, 104);
-        position: absolute;
-        top: 5px;
-        right: -4px;
-      }
-      .load_spinner--element--ball-pink {
-        width: 28%;
-        height: 28%;
-        border-radius: 50%;
-        background: rgb(253, 114, 137);
-        position: absolute;
-        top: 87%;
-        left: 36%;
-      }
-    }
-  }
-
   .header {
     width: 89%;
     gap: 19%;
@@ -195,62 +144,6 @@
       align-items: flex-start;
       gap: 25px;
       padding: 0;
-    }
-  }
-
-  /*  Menu  */
-
-  .container {
-    width: 100%;
-    margin-bottom: 210vh;
-
-    img {
-      width: 100%;
-      height: 250px;
-    }
-
-    .menu {
-      width: 95%;
-      top: 45%;
-      left: 0%;
-      padding: 10px;
-
-      .menu--titre {
-        width: 100%;
-        margin-left: 0;
-        display: flex;
-        justify-content: space-around;
-        padding: 10px;
-        align-items: center;
-        h1 {
-          font-size: 30px;
-          font-family: $shrikhand;
-        }
-        .menu--icon-card {
-          position: relative;
-
-          i {
-            font-size: 28px;
-          }
-        }
-      }
-
-      .categorie {
-        width: 100%;
-
-        .categorie--nom_plats {
-          margin: 0;
-        }
-
-        .categorie--details_plats {
-          width: 100%;
-          height: 35px;
-        }
-      }
-
-      .button {
-        margin: 20% 25% 30%;
-      }
     }
   }
 }
